--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <div class="section__text">
       <p class="section__text__p1">Hello Everyone👋</p>
       <h1 class="title">Omar Soliman</h1>
-      <p class="section__text__p2">Flutter Developer</p>
+      <p class="section__text__p2">Junior Flutter Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/Omar_Soliman_CV.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/Omar_Soliman.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -57,7 +57,7 @@
       </div>
       <div id="socials-container">
         <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
-          onclick="location.href='https:www.linkedin.com/in/omar-soliman-28104a1a8/'" />
+          onclick="location.href='https://www.linkedin.com/in/omar-soliman-%F0%9F%87%B5%F0%9F%87%B8-28104a1a8'" />
         <img src="./assets/github.png" alt="My Github profile" class="icon"
           onclick="location.href='https:github.com/omarshaf3y'" />
 
