--- a/index.html
+++ b/index.html
@@ -198,7 +198,6 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
   <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
@@ -249,7 +248,6 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
   <section id="projects">
 
@@ -300,7 +298,7 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+
   </section>
   <section id="projects">
 
@@ -335,23 +333,23 @@
             </button>
           </div>
         </div>
-        <!-- <div class="details-container color-container">
+        <div class="details-container color-container">
           <div class="article-container">
             <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Tunes App</h2>
+          <h2 class="experience-sub-title project-title">Bookly App</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com/omarshaf3y/tunes_app.git'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/omarshaf3y/LougaApi.git'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
               Live Demo
             </button>
-          </div> -->
+          </div> 
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+    
   </section>
   <section id="contact">
     <p class="section__text__p1">Get in Touch</p>
